@@ -1182,15 +1182,6 @@ $End</code></pre>
         <tr><td> 2</td><td>переключить индикатор в противоположное состояние</td></tr>
        </table>
     <p>Функция в младшем бите возвращает предыдущее значение выбранной клавиши (или текущее, если <var>Action</var>=-1).</p>
-
-    <p>Функция капризная (возможно зависание компьютера), поэтому пользоваться ей надо осторожно.</p>
-    <p>Например, макрос, повешенный на <kbd>Ctrl</kbd>+<kbd>CapsLock</kbd> (переключение между окнами) должен иметь некую обвязку:</p>
-       <pre class="codesample"><code>CtrlShiftTab
-%a=flock(1,-1)&amp;1;
-$while((flock(1,-1)&amp;1)==%a)
-  <a href="#sleep">sleep</a>(50)
-  flock(1,2)
-$end</code></pre>
     </td>
   </tr>
 
